# WFDG-Generator

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp  pybinder.cpp
include/WFDGGen/: Configuration.h  WFDG.h
include/WFGGen/: WFG.h
src/: AbstractDepnHelper.cpp  AbstractDepnHelper.h  CMakeLists.txt  CPGGen.cpp  CPGGen.h  Config.cpp  Config.h  Configuration.cpp  Configuration.h  ContrDepn.cpp  ContrDepn.h  CustomCFG.cpp  CustomCFG.h  CustomCPG.cpp  CustomCPG.h  DepnHelper.cpp  DepnHelper.h  DepnMapper.cpp  DepnMapper.h  DetailedDepnHelper.cpp  DetailedDepnHelper.h  FuncInfo.cpp  FuncInfo.h  FuncInfoGen.cpp  FuncInfoGen.h  GlobalInstance.cpp  GlobalInstance.h  MiniCFG.cpp  MiniCFG.h  SimplifiedDepnHelper.cpp  SimplifiedDepnHelper.h  TokenInfo.cpp  TokenInfo.h  TokenInfoGen.cpp  TokenInfoGen.h  WFDG.cpp  WFDGGen.cpp  WFDGGen.h  WFG.cpp  WFGGen.cpp  (+4 more)
